springup/crates/springup-core/tests/snapshots/snapshot_tests__application_dev_yml.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
# Dev profile: local development defaults.
# Generated by springup 0.1.0.
spring:
  application:
    name: demo

  datasource:
    url: jdbc:postgresql://localhost:5432/demo
    username: app
    password: app


  jpa:
    hibernate:
      ddl-auto: update
    show-sql: true





server:
  port: 8080

logging:
  level:
    com.example.demo: DEBUG
    org.springframework.web: DEBUG
