springup/crates/springup-core/tests/snapshots/snapshot_tests__application_prod_yml.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
# Production profile: read sensitive values from environment variables.
# Generated by springup 0.1.0.
spring:
  application:
    name: demo

  datasource:
    url: ${DB_URL}
    username: ${DB_USERNAME}
    password: ${DB_PASSWORD}


  jpa:
    hibernate:
      ddl-auto: validate
    show-sql: false
    open-in-view: false





server:
  port: ${PORT:8080}
  shutdown: graceful

management:

  endpoint:
    health:
      show-details: when_authorized

logging:
  level:
    com.example.demo: INFO
    root: WARN
