springup/crates/springup-core/tests/snapshots/snapshot_tests__ci_maven.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
# GitHub Actions CI workflow for a Maven-based Spring Boot service.
# Generated by springup 0.1.0.
name: CI

on:
  push:
    branches: [main, master]
  pull_request:
    branches: [main, master]

concurrency:
  group: ci-${{ github.ref }}
  cancel-in-progress: true

env:
  JAVA_VERSION: "21"

jobs:
  build:
    name: Build & Test
    runs-on: ubuntu-latest
    steps:
      - uses: actions/checkout@v4

      - name: Set up Java
        uses: actions/setup-java@v4
        with:
          distribution: temurin
          java-version: ${{ env.JAVA_VERSION }}
          cache: maven

      - name: Build with Maven
        run: ./mvnw -B -ntp verify

      - name: Upload test reports
        if: always()
        uses: actions/upload-artifact@v4
        with:
          name: surefire-reports
          path: target/surefire-reports/
          if-no-files-found: ignore
