springup/crates/springup-core/tests/snapshots/snapshot_tests__docker_compose_no_db.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
# Docker Compose for demo.
# Generated by springup 0.1.0.
#
# Usage:
#   docker compose up --build
#
# The app service is always defined. Database / cache services are added when the matching
# Initializr dependency was selected at scaffold time.

services:
  app:
    build:
      context: .
      dockerfile: Dockerfile
    image: demo:latest
    container_name: demo
    ports:
      - "8080:8080"
    environment:
      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-dev}
