springup/crates/springup-core/tests/snapshots/snapshot_tests__docker_compose_with_postgres.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
# Docker Compose for demo.
# Generated by springup 0.1.0.
#
# Usage:
#   docker compose up --build
#
# The app service is always defined. Database / cache services are added when the matching
# Initializr dependency was selected at scaffold time.

services:
  app:
    build:
      context: .
      dockerfile: Dockerfile
    image: demo:latest
    container_name: demo
    ports:
      - "8080:8080"
    environment:
      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE:-dev}

    depends_on:

      postgres:
        condition: service_healthy







  postgres:
    image: postgres:16-alpine
    container_name: demo-postgres
    environment:
      POSTGRES_DB: demo
      POSTGRES_USER: app
      POSTGRES_PASSWORD: app
    ports:
      - "5432:5432"
    volumes:
      - postgres-data:/var/lib/postgresql/data
    healthcheck:
      test: ["CMD-SHELL", "pg_isready -U app"]
      interval: 5s
      timeout: 3s
      retries: 10






volumes:

  postgres-data:
