springup/crates/springup-core/tests/snapshots/snapshot_tests__dockerfile_maven.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
# Multi-stage build for a Maven-based Spring Boot service.
# Generated by springup 0.1.0.
#
# Build:
#   docker build -t demo:latest .
# Run:
#   docker run --rm -p 8080:8080 demo:latest

# ---------- Build stage ----------
FROM maven:3.9-eclipse-temurin-21 AS build
WORKDIR /workspace
COPY pom.xml .
RUN mvn -B -q dependency:go-offline
COPY src ./src
RUN mvn -B -q clean package -DskipTests

# ---------- Runtime stage ----------
FROM eclipse-temurin:21-jre AS runtime
WORKDIR /app

COPY --from=build /workspace/target/*-SNAPSHOT.jar /app/app.jar
ENTRYPOINT ["java", "-jar", "/app/app.jar"]


EXPOSE 8080

HEALTHCHECK --interval=30s --timeout=3s --start-period=20s --retries=3 \
  CMD wget -qO- http://localhost:8080/api/health | grep -q '"status":"UP"' || exit 1
