springup/crates/springup-core/tests/snapshots/snapshot_tests__hexagonal_sample_controller.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
package com.example.demo.adapter.in.web;

import com.example.demo.domain.model.Sample;
import com.example.demo.domain.port.in.GetSampleUseCase;
import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.PathVariable;
import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;

import java.util.Map;

/**
 * Driving adapter: REST controller that delegates to {@link GetSampleUseCase}.
 *
 * Generated by springup 0.1.0.
 */
@RestController
@RequestMapping("/api/samples")
public class SampleController {

    private final GetSampleUseCase getSample;

    public SampleController(GetSampleUseCase getSample) {
        this.getSample = getSample;
    }

    @GetMapping("/{id}")
    public ResponseEntity<?> get(@PathVariable Long id) {
        return getSample.findById(id)
            .<ResponseEntity<?>>map(ResponseEntity::ok)
            .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
                .body(Map.of("error", "not found", "id", id)));
    }
}
