springup/crates/springup-core/tests/snapshots/snapshot_tests__layered_api_response_dto.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
package com.example.demo.dto;

import com.fasterxml.jackson.annotation.JsonInclude;

import java.time.Instant;
import java.util.Map;

/**
 * Standard API response envelope used by every controller in this service.
 *
 * Success responses set {@link #data}; error responses set {@link #error} with an optional
 * {@link #details} map for per-field validation messages.
 *
 * Generated by springup 0.1.0.
 */
@JsonInclude(JsonInclude.Include.NON_NULL)
public class ApiResponse<T> {

    private boolean success;
    private Instant timestamp;
    private T data;
    private ApiError error;

    public ApiResponse() {
        this.timestamp = Instant.now();
    }

    public static <T> ApiResponse<T> ok(T data) {
        ApiResponse<T> r = new ApiResponse<>();
        r.success = true;
        r.data = data;
        return r;
    }

    public static <T> ApiResponse<T> error(int status, String message, Map<String, ?> details) {
        ApiResponse<T> r = new ApiResponse<>();
        r.success = false;
        r.error = new ApiError(status, message, details);
        return r;
    }

    public boolean isSuccess() { return success; }
    public void setSuccess(boolean success) { this.success = success; }
    public Instant getTimestamp() { return timestamp; }
    public void setTimestamp(Instant timestamp) { this.timestamp = timestamp; }
    public T getData() { return data; }
    public void setData(T data) { this.data = data; }
    public ApiError getError() { return error; }
    public void setError(ApiError error) { this.error = error; }

    public static class ApiError {
        private int status;
        private String message;
        private Map<String, ?> details;

        public ApiError(int status, String message, Map<String, ?> details) {
            this.status = status;
            this.message = message;
            this.details = details;
        }

        public int getStatus() { return status; }
        public void setStatus(int status) { this.status = status; }
        public String getMessage() { return message; }
        public void setMessage(String message) { this.message = message; }
        public Map<String, ?> getDetails() { return details; }
        public void setDetails(Map<String, ?> details) { this.details = details; }
    }
}
