springup/crates/springup-core/tests/snapshots/snapshot_tests__layered_sample_controller.snap
---
source: crates/springup-core/tests/snapshot_tests.rs
expression: rendered
---
package com.example.demo.controller;

import com.example.demo.dto.ApiResponse;
import com.example.demo.entity.SampleEntity;
import com.example.demo.service.SampleService;

import jakarta.validation.constraints.NotBlank;

import org.springframework.http.HttpStatus;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;

import java.util.List;
import java.util.Map;

/**
 * Sample REST controller for CRUD operations on {@link SampleEntity}.
 *
 * Generated by springup 0.1.0 as a working vertical slice through the layered
 * architecture. Replace or remove before shipping.
 */
@RestController
@RequestMapping("/api/samples")
public class SampleController {

    private final SampleService service;

    public SampleController(SampleService service) {
        this.service = service;
    }

    @GetMapping
    public ApiResponse<List<SampleEntity>> list() {
        return ApiResponse.ok(service.findAll());
    }

    @GetMapping("/{id}")
    public ResponseEntity<ApiResponse<SampleEntity>> get(@PathVariable Long id) {
        return service.findById(id)
            .map(s -> ResponseEntity.ok(ApiResponse.ok(s)))
            .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
                .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Not found", Map.of("id", id))));
    }

    @PostMapping
    @ResponseStatus(HttpStatus.CREATED)
    public ApiResponse<SampleEntity> create(@RequestBody CreateSampleRequest req) {
        return ApiResponse.ok(service.create(req.name(), req.description()));
    }

    @PutMapping("/{id}")
    public ResponseEntity<ApiResponse<SampleEntity>> update(@PathVariable Long id, @RequestBody CreateSampleRequest req) {
        return service.update(id, req.name(), req.description())
            .map(s -> ResponseEntity.ok(ApiResponse.ok(s)))
            .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
                .body(ApiResponse.error(HttpStatus.NOT_FOUND.value(), "Not found", Map.of("id", id))));
    }

    @DeleteMapping("/{id}")
    public ApiResponse<Map<String, Object>> delete(@PathVariable Long id) {
        boolean deleted = service.delete(id);
        return ApiResponse.ok(Map.of("id", id, "deleted", deleted));
    }

    public record CreateSampleRequest(

        @NotBlank String name,
        @NotBlank String description

    ) {}
}
